# Robust-M-Estimation

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
pypi_package/: README.md  pyproject.toml  setup.py
pypi_package/src/gnc_smoothie/: base_irls.py  check_derivs.py  draw_functions.py  gnc_irls_p_influence_func.py  gnc_irls_p_params.py  gnc_null_params.py  gnc_welsch_params.py  irls.py  plt_alg_vis.py  pseudo_huber_influence_func.py  quadratic_influence_func.py  sup_gauss_newton.py  welsch_influence_func.py
pypi_package/src/gnc_smoothie/cython_files/: gnc_irls_p_influence_func.pxd  linear_regressor_fast.pxd  linear_regressor_gnc_irls_p_fast.pyx  linear_regressor_pseudo_huber_fast.pyx  linear_regressor_weighted_fit.pyx  linear_regressor_welsch_evaluator.py  linear_regressor_welsch_fast.pyx  welsch_influence_func.pxd
pypi_package/src/gnc_smoothie/linear_model/: README.md  linear_regressor.py  linear_regressor_base.py  linear_regressor_gnc_irls_p.py  linear_regressor_pseudo_huber.py  linear_regressor_welsch.py
pypi_package/src/gnc_smoothie_philfm/: base_irls.py  check_derivs.py  draw_functions.py  gnc_irls_p_params.py  gnc_null_params.py  gnc_welsch_params.py  irls.py  null_params.py  plt_alg_vis.py  pseudo_huber_influence_func.py  quadratic_influence_func.py  sup_gauss_newton.py  welsch_influence_func.py
pypi_package/src/gnc_smoothie_philfm/cython/: linear_regressor_gnc_irls_p_evaluator.py  linear_regressor_gnc_irls_p_fast.pyx  linear_regressor_pseudo_huber_evaluator.py  linear_regressor_pseudo_huber_fast.pyx  linear_regressor_welsch_fast.pyx  pseudo_huber_influence_func.pxd
pypi_package/src/gnc_smoothie_philfm/cython_files/: linear_regressor_evaluator_base.py  linear_regressor_fast.pxd  linear_regressor_gnc_irls_p_evaluator.py  linear_regressor_gnc_irls_p_fast.pyx  linear_regressor_pseudo_huber_evaluator.py  linear_regressor_pseudo_huber_fast.pyx  linear_regressor_welsch_evaluator.py  (+2 more)
pypi_package/tests/: README.md  check_derivs.py  evaluator_check.py  evaluator_test.py  test_gnc_irls_p_params.py  test_gnc_welsch_params.py  test_linear_regressor.py
(+282 files in other folders)
