[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#ext-modules = [
#  {name = "gnc_smoothie_philfm.cython", sources = ["gnc_smoothie_philfm/cython/*.pyx"]}
#]
#include-package-data = true

#[tool.setuptools.package-data]
#src = ['gnc_smoothie_philfm/cython/*.pyx']

[project]
name = "gnc_smoothie_philfm"
version = "0.0.56"
authors = [
  { name="Philip McLauchlan", email="philipmclauchlan6@gmail.com" },
]
maintainers = [
  { name="Philip McLauchlan", email="philipmclauchlan6@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "Model fitting using IRLS and variants"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/PhilFM/Robust-M-Estimation.git"
