[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#ext-modules = [
#  {name = "gnc_smoothie.cython", sources = ["gnc_smoothie/cython/*.pyx"]}
#]
#include-package-data = true

#[tool.setuptools.package-data]
#src = ['gnc_smoothie/cython/*.pyx']

[project]
name = "gnc_smoothie"
version = "0.0.1"
authors = [
  { name="Philip McLauchlan", email="philipmclauchlan6@gmail.com" },
]
maintainers = [
  { name="Philip McLauchlan", email="philipmclauchlan6@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "Model fitting using IRLS and variants"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/PhilFM/Robust-M-Estimation.git"
